[package]
name = "tak"
version = "0.1.0"
authors = ["Tilman Schmidt <AccessKeymaster@gmx.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
read_input = "0.8"
nom = "6.0.0-alpha2"
grid = "0.2"
colored = "2"
thiserror = "1"