[package]
name = "rustak"
version = "0.1.0"
authors = ["Tilman Schmidt <AccessKeymaster@gmx.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
read_input = "0.8"
nom = "6.0.0-alpha2"
grid = "0.2"
colored = "2"
thiserror = "1"
bounded-integer = { version = "0.2", path = "deps/bounded-integer" }

serde = { version = "1.0", features = ["derive"], optional = true }
deepsize = { version = "0.2", optional = true }

[features]
serde_support = ["serde", "bounded-integer/serde"]
measure_game_size = ["deepsize"]